# WorkMetrics

./: .env.example  README.md  docker-compose.yml
.github/agents/: copilot-instructions.md
.github/workflows/: ci.yml
.specify/memory/: constitution.md
backend/: .dockerignore  .gitignore  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/src/: __init__.py
backend/src/api/: main.py
backend/src/api/middleware/: __init__.py  error_handler.py  logging.py
backend/src/api/routes/: __init__.py  cycle_time.py  four_keys.py  health.py  projects.py  team_activity.py
backend/src/config/: settings.py
backend/src/database/: session.py
backend/src/database/migrations/: env.py
backend/src/database/migrations/versions/: 001_create_initial_tables.py  002_add_team_activity_tables.py
backend/src/models/: __init__.py  metrics.py  project.py  team_member.py
backend/src/services/: activity_analyzer.py  cycle_time_analyzer.py  data_refresh.py  gitlab_client.py  metrics_calculator.py
backend/src/tasks/: __init__.py  daily_refresh.py
docs/: user-guide.md
frontend/: .dockerignore  .gitignore  Dockerfile  index.html  nginx.conf  package.json
frontend/src/: App.tsx
frontend/src/components/common/: ErrorBoundary.tsx  ErrorMessage.tsx  LoadingSpinner.tsx  TimeRangeSelector.tsx
frontend/src/components/cycle-time/: CycleTimeTab.tsx  PercentileChart.tsx  StageBreakdown.tsx
frontend/src/hooks/: useMetrics.ts
frontend/src/pages/: Dashboard.tsx  ProjectSettings.tsx  Projects.tsx
frontend/src/services/: api.ts  cycleTimeService.ts  fourKeysService.ts  teamActivityService.ts
frontend/src/types/: api.ts  cycleTime.ts  metrics.ts  team.ts
specs/001-gitlab-metrics-dashboard/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-gitlab-metrics-dashboard/checklists/: requirements.md
specs/001-gitlab-metrics-dashboard/contracts/: api.yaml
(+9 files in other folders)
